--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,14 @@ dependencies:
   flutter_dotenv: ^5.1.0
   image_picker: ^1.0.4
   
+  # Database and storage
+  sqflite: ^2.3.0
+  path_provider: ^2.1.1
+  path: ^1.8.3
+  
+  # UUID generation
+  uuid: ^4.2.1
+  
   # GetX for state management, dependency injection, and routing
   get: ^4.6.6
 
