--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,10 @@ dependencies:
   
   # Date formatting
   intl: ^0.19.0
+  
+  # Local notifications for reminders
+  flutter_local_notifications: ^17.2.3
+  timezone: ^0.9.4
 
 dev_dependencies:
   flutter_test:
