--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,7 @@ dependencies:
   get: ^4.6.6
   
   # Markdown rendering
-  flutter_markdown: ^0.6.18
+  flutter_markdown: ^0.7.7+1
   
   # Date formatting
   intl: ^0.19.0
@@ -67,6 +67,11 @@ dependencies:
   local_auth: ^2.3.0
   crypto: ^3.0.5
   flutter_secure_storage: ^9.2.2
+  
+  # Document export
+  pdf: ^3.11.1
+  printing: ^5.13.3
+  markdown: ^7.0.2
 
 dev_dependencies:
   flutter_test:
